--- a/Quartz-Cluster/src/main/resources/application-dev.yml
+++ b/Quartz-Cluster/src/main/resources/application-dev.yml
@@ -11,28 +11,21 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=true
     username: root
     password: root
-
-#spring:
-#  datasource:
-#    type: com.alibaba.druid.pool.DruidDataSource
-#    driver-class-name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://127.0.0.1:3306/test_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-#    username: root
-#    password: root
-#    initialSize: 5
-#    minIdle: 5
-#    maxActive: 20
-#    maxWait: 6000
-#    timeBetweenEvictionRunsMillis: 3600000
-#    minEvictableIdleTimeMillis: 1800000
-#    validationQuery: SELECT 1 FROM DUAL
-#    testWhileIdle: true
-#    testOnBorrow: true
-#    testOnReturn: true
-#    poolPreparedStatements: true
-#    maxPoolPreparedStatementPerConnectionSize: 20
-#    filters: stat,wall #,log4j
-#    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+    type: com.alibaba.druid.pool.DruidDataSource
+    initialSize: 5
+    minIdle: 5
+    maxActive: 20
+    maxWait: 6000
+    timeBetweenEvictionRunsMillis: 3600000
+    minEvictableIdleTimeMillis: 1800000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: true
+    testOnReturn: true
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 20
+    filters: stat,wall #,log4j
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   jpa:
     hibernate:
       #ddl-auto: create #ddl-auto:设为create表示每次都重新建表
